# slam_frontend_ws

./: .gitignore  .readthedocs.yaml  README.md
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/_ext/: yaml_doc.py
docs/source/api/: index.rst  kitti_data_loader.rst  lidar_preprocessing.rst  loam_feature_extraction.rst  loam_scan_matching.rst
docs/source/guide/: dataset.rst  install_run.rst  launching.rst  pipeline.rst
src/kitti_data_loader/: package.xml  setup.cfg  setup.py
src/kitti_data_loader/config/: kitti_data_loader_layout.json  params.yaml
src/kitti_data_loader/kitti_data_loader/: __init__.py  kitti_publisher.py
src/kitti_data_loader/launch/: kitti_data_loader.launch.py
src/lidar_preprocessing/: package.xml  setup.cfg  setup.py
src/lidar_preprocessing/config/: params.yaml  preprocessing_foxglove.json  preprocessing_params.yaml
src/lidar_preprocessing/foxglove_viz/: preprocessing_viz.json
src/lidar_preprocessing/launch/: preprocessing.launch.py
src/lidar_preprocessing/lidar_preprocessing/: __init__.py  voxel_downsampler.py
src/loam_feature_extraction/: package.xml  setup.cfg  setup.py
src/loam_feature_extraction/config/: feature_extraction_layout.json  params.yaml
src/loam_feature_extraction/launch/: feature_extraction.launch.py
src/loam_feature_extraction/loam_feature_extraction/: __init__.py  feature_extractor.py
src/loam_scan_matcher/: package.xml  setup.cfg  setup.py
src/loam_scan_matcher/config/: foxglove_loam_scan_matching.json  params.yaml  scan_matching_layout.json
src/loam_scan_matcher/launch/: scan_matching.launch.py
src/slam_frontend_launch/: README.md  package.xml  setup.cfg  setup.py
src/slam_frontend_launch/config/: foxglove_layout.json
src/slam_frontend_launch/launch/: full_pipeline.launch.py
(+1 files in other folders)
