<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_frontend_launch</name>
  <version>0.0.0</version>
  <description>Launch files for complete SLAM frontend pipeline</description>
  <maintainer email="zeidk@umd.edu">zeid</maintainer>
  <license>Apache-2.0</license>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>kitti_data_loader</depend>
  <depend>lidar_preprocessing</depend>
  <depend>loam_feature_extraction</depend>
  <depend>loam_scan_matcher</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
